experiment_output/error_log/nondex-choe061-spring-demo.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/domain/User.java:24: error: cannot find symbol
        Level nextLevel = this.level.getNextLevel();
                                    ^
  symbol:   method getNextLevel()
  location: variable level of type Level
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/domain/User.java:34: error: constructor Level in enum Level cannot be applied to given types;
        GOLD(3, null),
            ^
  required: no arguments
  found: int,<null>
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/domain/User.java:35: error: constructor Level in enum Level cannot be applied to given types;
        SILVER(2, GOLD),
              ^
  required: no arguments
  found: int,Level
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/domain/User.java:36: error: constructor Level in enum Level cannot be applied to given types;
        BRONZE(1, SILVER);
              ^
  required: no arguments
  found: int,Level
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:26: error: cannot find symbol
        int resultCode = userMapper.insertUser(user.getName(), user.getPw());
                                                   ^
  symbol:   method getName()
  location: variable user of type User
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:26: error: cannot find symbol
        int resultCode = userMapper.insertUser(user.getName(), user.getPw());
                                                                   ^
  symbol:   method getPw()
  location: variable user of type User
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:28: error: constructor HttpResponse in class HttpResponse cannot be applied to given types;
            return new HttpResponse(false, resultCode);
                   ^
  required: no arguments
  found: boolean,int
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:30: error: constructor HttpResponse in class HttpResponse cannot be applied to given types;
        return new HttpResponse(true, resultCode);
               ^
  required: no arguments
  found: boolean,int
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:48: error: constructor HttpResponse in class HttpResponse cannot be applied to given types;
            return new HttpResponse(false, "처리되지 않았습니다.");
                   ^
  required: no arguments
  found: boolean,String
  reason: actual and formal argument lists differ in length
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1344/wd/NonDex-plugin-test/github.com/choe061/spring-demo/src/main/java/com/choi/spring/service/UserServiceImpl.java:50: error: constructor HttpResponse in class HttpResponse cannot be applied to given types;
        return new HttpResponse(true, "정상적으로 처리되었습니다.");
               ^
  required: no arguments
  found: boolean,String
  reason: actual and formal argument lists differ in length
10 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 6s
